test/fixtures/fail/number_0x_mixed_h.l4gs.g
; Cannot combine the `0x` prefix with the `h` suffix.
        dd 0xab_h
